@@ -1,3 +1,3 @@
 {
-	"latest_version" : "2.0.16"
+	"latest_version" : "2.0.17"
 }
